# Lirien

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  NEXT.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  ir_stable.rs  plan.md  pyproject.toml  showcase.py
.agents/: AGENTS.md
crates/lila-backend/: Cargo.toml
crates/lila-backend/src/: lib.rs
crates/lila-backend/src/cranelift/: mod.rs
crates/lila-backend/src/cranelift/lower/: arithmetic.rs  control_flow.rs  error.rs  higher_order.rs  intrinsics.rs  memory.rs  mod.rs  signature.rs  storage.rs  tuples.rs  utils.rs
crates/lila-bridge/: Cargo.toml  README.md  build.rs
crates/lila-bridge/src/: cache.rs  lib.rs
crates/lila-bridge/src/bridge/: mod.rs
crates/lila-core/: Cargo.toml
crates/lila-ir/: Cargo.toml
crates/lila-ir/src/: ir.rs  lib.rs  registry.rs
crates/lila-ir/src/analysis/: interval.rs  liveness.rs  mod.rs
crates/lila-ir/src/builder/: capture_analysis.rs  macros.rs  metadata.rs  mod.rs  visitor_tests.rs
crates/lila-ir/src/ir/: display.rs  function.rs  instruction.rs  types.rs
crates/lila-ir/src/optimization/: constant_folding.rs  dce.rs  inference.rs  mod.rs  type_propagation.rs
crates/lila-verify/: Cargo.toml
crates/lila-verify/src/: backend.rs  error.rs  lib.rs  refinement_parser.rs  z3_backend.rs
crates/lila-verify/src/permissions/: mod.rs  tracker.rs
crates/lila-verify/src/refinement/: mod.rs  resolver.rs
crates/lirien-backend/: Cargo.toml
crates/lirien-backend/src/: lib.rs
crates/lirien-bridge/: Cargo.toml  build.rs
crates/lirien-bridge/src/: cache.rs  lib.rs
crates/lirien-bridge/src/bridge/: mod.rs
crates/lirien-core/: Cargo.toml
crates/lirien-core/src/: lib.rs  logging.rs
crates/lirien-ir/: Cargo.toml
crates/lirien-ir/src/: lib.rs  registry.rs
crates/lirien-ir/src/analysis/: liveness.rs
crates/lirien-ir/src/analysis/interval/: mod.rs  narrowing.rs  ops.rs  types.rs
crates/lirien-ir/src/builder/: capture_analysis.rs  error.rs  macros.rs  metadata.rs  mod.rs  ssa_manager.rs  visitor_tests.rs
crates/lirien-ir/src/builder/visitor/: assignments.rs  helpers.rs  mod.rs  statements.rs
crates/lirien-ir/src/builder/visitor/expressions/: access.rs  binary.rs  calls.rs  literals.rs  mod.rs
crates/lirien-ir/src/ir/: display.rs  function.rs  instruction.rs  mod.rs  types.rs
crates/lirien-ir/src/optimization/: dce.rs  fusion.rs  inference.rs  mod.rs  type_propagation.rs
crates/lirien-verify/: Cargo.toml
crates/lirien-verify/src/: backend.rs  error.rs  lib.rs  z3_backend.rs
crates/lirien-verify/src/refinement/: mod.rs  resolver.rs  utils.rs
crates/lirien-verify/src/refinement/parser/: bitvectors.rs  floats.rs  integers.rs  mod.rs  reals.rs
crates/lirien-verify/src/verifier/: arithmetic.rs  calls.rs  cfg.rs  control_flow.rs  intervals.rs  macros.rs  memory.rs  mod.rs  returns.rs  tuples.rs
doc/: expansion_plan.md
docs/archived/: plan.md  unified_verification_roadmap.md
docs/plans/: permission_system_expansion.md
docs/proposals/: proposed_stdlib.md
python/lila/: __init__.py  compiler.py  decorators.py  ffi.py  signatures.py  types.py
python/lila/types/: __init__.py  arithmetic.py  base.py  decorators.py  functions.py  memory.py
python/lirien/: __init__.py  decorators.py  diagnostics.py  ffi.py  num.py  signatures.py
python/lirien/compiler/: __init__.py  ast_transformers.py  pipeline.py  signature_helpers.py
python/lirien/types/: __init__.py  arithmetic.py  base.py  decorators.py  definitions.py  functions.py  memory.py  result.py  simd.py
src/: lib.rs
src/backend/: mod.rs
src/backend/cranelift/: mod.rs
src/bridge/: mod.rs  registry.rs
src/diagnostics/: logging.rs  mod.rs
src/ssa/: ir.rs  mod.rs
src/ssa/analysis/: interval.rs  liveness.rs
src/ssa/builder/: capture_analysis.rs  metadata.rs  mod.rs  visitor.rs  visitor_tests.rs
src/ssa/optimization/: constant_folding.rs  dce.rs  inference.rs  mod.rs  type_propagation.rs
src/verification/: borrow_checker.rs  mod.rs  refinement_parser.rs
src/verification/permissions/: mod.rs
src/verification/z3/: arithmetic.rs  calls.rs  control_flow.rs  memory.rs  mod.rs  tuples.rs
tests/: backend_tests.rs  borrow_tests.rs  bridge_tests.rs  buffer_tests.rs  float_verification_tests.rs  optimization_tests.rs  permission_legacy_tests.rs  refinement_tests.rs  ssa_tests.rs  test_buffer.rs  test_optimization.rs  test_permission.rs  test_permission_legacy.rs  test_ssa.rs  test_verification.rs  verification_tests.rs
tests/bench/: bench_mandelbrot.py
tests/python/: test_enums.py  test_floats_precision.py  test_intrinsics.py  test_loop_auto_invariant.py  test_loops.py  test_nested_layouts.py  test_num.py  test_return_refinement.py  test_safety.py  test_tuple_unpacking.py
tests/python/concurrency/: test_parallel_for.py
tests/python/control_flow/: test_early_returns.py  test_for_loops.py  test_iterators.py  test_loop_unrolling.py  test_while_loops.py
tests/python/math_ops/: test_bitwise.py  test_intrinsics.py  test_simd.py
tests/python/memory/: test_buffer_struct.py  test_buffers.py  test_nll.py  test_permissions.py  test_structural_permissions.py  test_value_alloc.py
tests/python/type_system/: test_adt.py  test_arrays.py  test_closures.py  test_ellipsis.py  test_enum_protocol.py  test_enums.py  test_exceptions.py  test_hof_specialization.py  test_lists.py  test_match_guards.py  test_match_statements.py  test_monomorphization.py  test_namedtuple.py  test_nested_layouts.py  test_nested_tuple.py  test_overloading.py  test_protocol_dispatch.py  test_recursive_adt.py  test_result.py  test_slices.py  test_strings.py  test_structs.py  test_tensor_arithmetic.py  test_tensor_broadcasting.py  test_tensor_reductions.py  test_tensors.py  test_tuple_unpacking.py  test_typeddict.py
tests/python/verification/: test_advanced_refinements.py  test_bitwise_refinement.py  test_cache_invalidation.py  test_contracts.py  test_diagnostics.py  test_floats_precision.py  test_ite_refinement.py  test_loop_verification.py  test_null_safety.py  test_recursion.py  test_refinements.py  test_safety.py
(+67 files in other folders)
