[package]
name = "lila"
version = "0.1.0"
edition = "2021"
authors = ["Seuriin <seuriin@gmail.com>"]
description = "A Formally Verified, Affine-Typed JIT Compiler for Python via Z3 and Cranelift"
repository = "https://github.com/SSL-ACTX/Lila"
homepage = "https://github.com/SSL-ACTX/Lila"
documentation = "https://github.com/SSL-ACTX/Lila"
readme = "README.md"
keywords = ["compiler", "verification", "jit", "python", "z3"]
categories = ["compilers", "development-tools"]
license = "AGPL-3.0-only"

[lib]
name = "lila_core"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "auto-initialize"] }
rustpython-parser = "0.4"
rustpython-ast = { version = "0.4", features = ["visitor"] }
cranelift = "0.100"
cranelift-jit = "0.100"
cranelift-module = "0.100"
cranelift-native = "0.100"
z3 = "0.20"
z3-sys = "0.11"
target-lexicon = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"
libc = "0.2.186"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = 0
strip = true
panic = "unwind"
incremental = true
lto = false
codegen-units = 256
