[workspace]
members = [
    "crates/lila-core",
    "crates/lila-ir",
    "crates/lila-verify",
    "crates/lila-backend",
    "crates/lila-bridge"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Seuriin <seuriin@gmail.com>"]
description = "A Formally Verified, Affine-Typed JIT Compiler for Python via Z3 and Cranelift"
repository = "https://github.com/SSL-ACTX/Lila"
homepage = "https://github.com/SSL-ACTX/Lila"
documentation = "https://github.com/SSL-ACTX/Lila"
readme = "README.md"
keywords = ["compiler", "verification", "jit", "python", "z3"]
categories = ["compilers", "development-tools"]
license = "AGPL-3.0-only"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
seahash = "4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = 0
strip = true
panic = "unwind"
incremental = true
lto = false
codegen-units = 256
