[workspace]
members = [
    "crates/lirien-core",
    "crates/lirien-ir",
    "crates/lirien-verify",
    "crates/lirien-backend",
    "crates/lirien-bridge"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Seuriin <seuriin@gmail.com>"]
description = "A Verifying JIT Compiler for a Safe Subset of Python via Z3 and Cranelift"
repository = "https://github.com/SSL-ACTX/Lirien"
homepage = "https://github.com/SSL-ACTX/Lirien"
documentation = "https://github.com/SSL-ACTX/Lirien"
readme = "README.md"
keywords = ["compiler", "verification", "jit", "python", "z3"]
categories = ["compilers", "development-tools"]
license = "AGPL-3.0-only"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
seahash = "4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = 0
strip = true
panic = "unwind"
incremental = true
lto = false
codegen-units = 256
