[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lirien"
version = "0.1.1"
description = "A Verifying JIT Compiler for a Safe Subset of Python via Z3 and Cranelift"
authors = [{name = "Seuriin", email = "seuriin@gmail.com"}]
maintainers = [{name = "Seuriin", email = "seuriin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
keywords = ["compiler", "verification", "jit", "python", "z3", "cranelift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SSL-ACTX/Lirien"
Repository = "https://github.com/SSL-ACTX/Lirien"
Documentation = "https://github.com/SSL-ACTX/Lirien"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "lirien.lirien_bridge"
manifest-path = "crates/lirien-bridge/Cargo.toml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore undefined name (F821), redefinition of unused name (F811), line too long (E501),
# ambiguous variable names (E741), unused variables (F841), and module-level imports (E402) in tests.
# These are common in testing code where mock objects, throwaway match unpackings,
# long test case descriptions, and temporary variables are used.
"tests/**/*.py" = ["F821", "F811", "E501", "E741", "F841", "E402"]

