[package]
name = "lila-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
lila-core = { path = "../lila-core" }
lila-ir = { path = "../lila-ir" }
cranelift = "0.100"
cranelift-jit = "0.100"
cranelift-module = "0.100"
cranelift-native = "0.100"
target-lexicon = "0.12"
tracing = "0.1"
libc = "0.2.186"
