[package]
name = "lila-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "lila_bridge"
crate-type = ["cdylib", "lib"]

[dependencies]
lila-core = { path = "../lila-core" }
lila-ir = { path = "../lila-ir" }
lila-verify = { path = "../lila-verify" }
lila-backend = { path = "../lila-backend" }
pyo3 = { version = "0.28", features = ["extension-module", "auto-initialize"] }
rustpython-parser = "0.4"
rustpython-ast = { version = "0.4", features = ["visitor"] }
tracing = "0.1"
cranelift-codegen = "0.100.1"
cranelift-native = "0.100.1"
serde.workspace = true
bincode.workspace = true
seahash.workspace = true
