[package]
name = "lirien-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
lirien-core = { path = "../lirien-core" }
rustpython-parser = "0.4"
rustpython-ast = { version = "0.4", features = ["visitor"] }
tracing = "0.1"
lazy_static = "1.4"
serde.workspace = true
